[package]
  name = "radiant-text"
  version = "0.0.1"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An EtherDream (laser projector) text display system."
  keywords = [ "EtherDream", "laser", "projector", "text", "render" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/radiant-text.rs"

[[bin]]
  name = "radient-text"

[dependencies]
  log = "0.3.*"

  # For my own personal development, until etherdream.rs stabilizes.
  # I'll only test, commit, and release against released versions, though.
  etherdream = { path = "../etherdream.rs" }
  #etherdream = "0.0.4"

  # Ditto:
  ilda = { path = "../ilda.rs" }
  #ilda = "0.0.2"

